// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`"execute" option should reuse PostCSS AST with JS styles: css 1`] = `
"a {
    color: green
}"
`;

exports[`"execute" option should reuse PostCSS AST with JS styles: errors 1`] = `[]`;

exports[`"execute" option should reuse PostCSS AST with JS styles: warnings 1`] = `[]`;

exports[`"execute" option should work with "Boolean" value: css 1`] = `
"a {
    color: green
}"
`;

exports[`"execute" option should work with "Boolean" value: errors 1`] = `[]`;

exports[`"execute" option should work with "Boolean" value: warnings 1`] = `[]`;

exports[`"execute" option should work with "postcss-js" parser: css 1`] = `
"a {
    color: yellow
}"
`;

exports[`"execute" option should work with "postcss-js" parser: errors 1`] = `[]`;

exports[`"execute" option should work with "postcss-js" parser: warnings 1`] = `[]`;
